--- a/app/templates/aboutme.html
+++ b/app/templates/aboutme.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <head>
-  <link rel="stylesheet" href="../static/styles/aboutus.css">
+  <link rel="stylesheet" href="../static/styles/aboutme.css">
   <link rel="stylesheet" href="../static/styles/coderimage.css">
 </head>
 
