--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -16,7 +16,7 @@
       </div>
       <ul class="links">
         <li><a href="/">Home</a></li>
-        <li><a href="/aboutus">About Me</a></li>
+        <li><a href="/aboutme">About Me</a></li>
         <li><a href="/blog">Blog</a></li>
         <li><a href="/hobbies">Hobbies</a></li>
         <li><a href="/timeline">Timeline</a></li>
