Posts show up in timeline page after submission

--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -45,7 +45,7 @@
             <li>Name: {{ event.name }}</li>
             <li>Name: {{ event.email }}</li>
             <li>Content: {{ event.content }}</li>
-            <li>Created at: {{ event.created_at }}</li>
+            <li>Created at: {{ event.created_at }}</li>]
         {% endfor %}
     </ul>
 {% endblock %}
