Minor changes & changed name from in the menubar from 'John's Portfolio' to 'John Afolayan'.

--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -12,7 +12,7 @@
   <div class="header">
     <div class="left">
       <div class="title">
-        John's Portfolio
+        John Afolayan
       </div>
       <ul class="links">
         <li><a href="/">Home</a></li>
